--- a/leafy-client/package.json
+++ b/leafy-client/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd leafy-client && yarn && yarn build"
   },
   "eslintConfig": {
     "extends": [
