--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "leafy-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "heroku-postbuild": "cd client && yarn && yarn build"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
