--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "cd leafy-client && yarn && yarn build"
+    "heroku-postbuild": "cd leafy-client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
