--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leafy-server",
   "version": "1.0.0",
-  "description": "Node.js + MongoDB: JWT Authentication & Authorization",
+  "description": "Node.js + MongoDB",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,13 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.2.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.1",
     "nodemon": "^2.0.15"
   }
